--- a/OnlineShopping.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/OnlineShopping.WebUI/Views/Shared/ProductSummary.cshtml
@@ -1,7 +1,34 @@
 ﻿@model OnlineShopping.Domain.Entities.Product
+<div class="col-xs-12 col-md-4">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <div class="panel-title" style="overflow-x: scroll">
+                <h3 style="white-space: nowrap">@Model.productName</h3>
+            </div>
 
-<div class="item"> 
-<h3>@Model.productName</h3> 
-@Model.barcode 
-<h4>@Model.costPrice.ToString("c")</h4> 
-</div> 
+        </div>
+        <div class="panel-body">
+            <div class="the-price">
+                <h4>@Model.costPrice.ToString("c")
+                    <span class="subscript">/item</span></h4>
+                <small>FREE shipping</small>
+            </div>
+            <table class="table">
+                <tr>
+                    <td>Manufacturer name
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="panel-footer">
+            @using (Html.BeginForm("AddToCart", "Cart"))
+            { 
+                @Html.HiddenFor(x => x.productID) 
+                @Html.Hidden("returnUrl", Request.Url.PathAndQuery) 
+                <button type="submit" class="btn btn-success">Add to cart</button>
+            }
+
+        </div>
+    </div>
+</div>
+
