--- a/OnlineShopping.WebUI/Views/Shared/_Layout.cshtml
+++ b/OnlineShopping.WebUI/Views/Shared/_Layout.cshtml
@@ -17,10 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#">OnlineShopping</a>
             </div>
             <div class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
+                    @{Html.RenderAction("Orders","Cart")}
                     @{Html.RenderAction("Summary", "Cart");}
                     @Html.Partial("_LogOnPartial")
 
