--- a/OnlineShopping.WebUI/Views/Cart/Index.cshtml
+++ b/OnlineShopping.WebUI/Views/Cart/Index.cshtml
@@ -25,13 +25,13 @@
                             </a>
                             <div class="media-body">
                                 <h4 class="media-heading"><a href="#">@line.Product.productName</a></h4>
-                                <h5 class="media-heading">by <a href="#">Manufacturer name</a></h5>
+                                <h5 class="media-heading">by <a href="#">@line.manufacturerName</a></h5>
                                 <span>Status: </span><span class="text-success"><strong>In Stock</strong></span>
                             </div>
                         </div>
                     </td>
                     <td class="col-sm-1 col-md-1" style="text-align: center">
-                        <input type="email" class="form-control" id="exampleInputEmail1" value="@line.Quantity">
+                        <input type="email" class="form-control" id="exampleInputEmail1" disabled value="@line.Quantity">
                     </td>
                     <td class="col-sm-1 col-md-1 text-center"><strong>@line.Product.costPrice.ToString("c")</strong></td>
                     <td class="col-sm-1 col-md-1 text-center"><strong>@((line.Quantity * line.Product.costPrice).ToString("c"))</strong></td>
@@ -66,7 +66,7 @@
                     <h5>Estimated shipping</h5>
                 </td>
                 <td class="text-right">
-                    <h5><strong>$6.94</strong></h5>
+                    <h5><strong>$0.00</strong></h5>
                 </td>
             </tr>
             <tr>
