--- a/OnlineShopping.WebUI/Views/Shared/_Layout.cshtml
+++ b/OnlineShopping.WebUI/Views/Shared/_Layout.cshtml
@@ -2,26 +2,26 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/typeahead_design.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/offcanvas.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/hogan-2.0.0.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/typeahead.js")" type="text/javascript"></script>
 </head>
 
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">OnlineShopping</a>
+                <a class="navbar-brand" href="@Url.Action("List", "Product")">OnlineShopping</a>
             </div>
             <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="@Url.Action("storeLocator", "GeoLocation")">Store Locator</a></li>
+                </ul>
                 <form class="navbar-form navbar-right">
-                    @{Html.RenderAction("Orders","Cart")}
                     @{Html.RenderAction("Summary", "Cart");}
                     @Html.Partial("_LogOnPartial")
 
@@ -40,17 +40,20 @@
                 </ul>
             </div>
             <!--/span-->
+            <div class="col-xs-12 col-sm-9">
+                <div class="example example-twitter-oss">
+                    <h2 class="example-name">Product</h2>
+                    <div class="demo">
+                        <input id="productName" class="typeahead" type="text" placeholder="Search Product">
+                        <button id="searchProduct" type="button" class="btn btn-info" onclick="onSeachProduct()"><span class="glyphicon glyphicon-search"></span></button>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-xs-12 col-sm-9">
-                <p class="pull-right visible-xs">
-                    <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-                </p>
-                <div class="jumbotron">
-                    <h1>Online Shopping</h1>
-                    <p>GPRS bootstrap customer login</p>
-                </div>
-                    @RenderBody()
-                    <!--/span-->
+
+                @RenderBody()
+                <!--/span-->
 
                 <!--/row-->
             </div>
@@ -75,3 +78,22 @@
 
 </body>
 </html>
+
+<script>
+    $(document).ready(function () {
+        $('.example-twitter-oss .typeahead').typeahead([
+  {
+      name: 'Product',
+      prefetch: '@Url.Action("getFullInventoryList", "Product")/',
+  }
+        ]);
+    });
+
+function onSeachProduct() {
+    var product = document.getElementById("productName");
+    //if (product.value == "")
+    //    alert("Choose a product");
+    //else
+    window.location.href = "@Url.Action("Details", "Product")" + "/?productName=" + product.value;
+}
+</script>
